--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,8 +1,8 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 6 hours
-    - cron: "* */6 * * *"
+  schedule: # execute every 1 hour
+    - cron: "* */1 * * *"
   workflow_dispatch:
 
 jobs:
